Fix scroll on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,10 @@
     margin-right:5px;
 }
 
-.mat-sidenav-container{
-    height: 100%;
+.main-container{
+    height: 100vh;
+}
+
+.mat-sidenav-content, .mat-sidenav-container, .main-container{
+    overflow:visible!important;
 }
